--- a/sass/_main.scss
+++ b/sass/_main.scss
@@ -2134,8 +2134,8 @@ body {
 
 	.content {
 		width: 50%;
-		max-width: 600px;
-		padding: 105px 0 105px 75px;
+		max-width: 615px;
+		padding: 105px 15px 105px 75px;
 
 		color: #fff;
 
@@ -2166,7 +2166,7 @@ body {
 	}
 }
 
-@media screen and (max-width: 600px) {
+@media screen and (max-width: 900px) {
 	.fullimage-text-block {
 		flex-direction: column;
 		padding: 50px 15px;
@@ -2174,6 +2174,7 @@ body {
 		img {
 			width: 100%;
 			margin-bottom: 50px;
+			border-radius: 3px;
 		}
 
 		.content {
