--- a/sass/_header.scss
+++ b/sass/_header.scss
@@ -789,6 +789,8 @@ form.search {
 
 			&.opened {
 				// display: block;
+				max-height: calc(100vh - 70px);
+				overflow: auto;
 
 				opacity: 1;
 
