--- a/sass/_header.scss
+++ b/sass/_header.scss
@@ -235,6 +235,7 @@ form.search {
 	.form-content {
 		margin: 0 auto;
 		width: 83%;
+		max-width: 1195px;
 		position: relative;
 		height: 54px;
 
